[package]
name = "regrep"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
# opt-level = "s"
strip = true # Only works on *nix systems

[dependencies]
lexopt = "0.2.1"
# rayon = "1.6.1"
